# carbon-c-relay

./: .gitignore  .travis.yml  ChangeLog.md  Dockerfile  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  aggregator.c  aggregator.h  allocator.c  allocator.h  autogen.sh  carbon-c-relay.1  carbon-c-relay.md  carbon-c-relay.vim  carbon-hash.c  carbon-hash.h  collector.c  collector.h  conffile.h  conffile.l  conffile.tab.c  conffile.tab.h  conffile.y  conffile.yy.c  config.guess  config.h.in  config.sub  configure  configure.ac  consistent-hash.c  consistent-hash.h  dispatcher.c  dispatcher.diff  dispatcher.h  faketime.c  faketime.h  fnv1a.c  (+19 more)
.github/workflows/: build-test-ci.yml
conf/: carbon-c-relay.conf
contrib/: .crelay.init.swp  cc_relay.spec  relay.conf  relay.init  relay.logrotate  relay.monit  relay.spec  relay.sysconfig
contrib/debuntu/conf/: carbon-c-relay.conf
contrib/debuntu/debian/: control
debian/: README  README.Debian  README.source  _carbon-c-relay.upstart  carbon-c-relay.default  carbon-c-relay.default.ex  carbon-c-relay.init  carbon-c-relay.upstart  changelog  control  copyright  dirs  init.d.ex  postinst  postinst.ex  postrm  postrm.ex  preinst  prerm.ex  rules
debian/conf/: carbon-c-relay.conf
issues/: distributiontest.c  issue10.conf  issue111.conf  issue117.conf  issue131.conf  issue135.conf  issue14.conf  issue152.conf  issue156.conf  issue157.conf  issue16.conf  issue160.conf  issue163.conf  issue165.conf  issue17.conf  issue180-a.conf  issue180.conf  issue184.conf  issue202.conf  issue211.conf  issue213.conf  issue218.conf  issue228.conf  issue231.conf  issue235.conf  issue236.conf  issue238.conf  issue240-rewrites.conf  issue240.conf  issue246.conf  issue252.conf  issue253.conf  issue263-c0.conf  issue263-c1.conf  issue263-c2.conf  issue263.conf  issue267.conf  issue27.conf  issue288.conf  issue293.conf  (+16 more)
src/: collector.c  consistent-hash.c  consistent-hash.h  dispatcher.h  queue.h  receptor.c  receptor.h  relay.c  relay.h  server.c  server.h
test/: basic.payload  basic.payloadout  basic.stst  create-self-cert.sh  dual-gzip.payload  dual-gzip.payloadout  dual-gzip.stst  dual-large-2.stst  dual-large-compress.payload  dual-large-compress.payloadout  dual-large-gzip-2.stst  dual-large-gzip.stst  dual-large-lz4-2.stst  dual-large-lz4.stst  dual-large-ssl-2.stst  dual-large-ssl.cert  dual-large-ssl.stst  dual-large.stst  dual-lz4-2.stst  dual-lz4.payload  dual-lz4.payloadout  dual-lz4.stst  dual-mtls-2.stst  dual-mtls.payload  dual-mtls.payloadout  dual-mtls.stst  dual-ssl-2.stst  dual-ssl.cert  dual-ssl.payload  dual-ssl.payloadout  dual-ssl.stst  dual-tcp-2.stst  dual-tcp.payload  dual-tcp.payloadout  dual-tcp.stst  dual-udp-2.stst  dual-udp.payload  dual-udp.payloadout  dual-udp.stst  dual.cert  (+61 more)
